codama-macros/tests/node_attribute/unrecognized_node.fail.rs
use codama_macros::node;

#[node(unrecognizedNode(foo = 42))]
pub struct Foo(usize);

fn main() {}
